spacing fixes for mobile pages

--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -1,5 +1,9 @@
 .f-body-container
-  @media screen and (max-width: 1399px)
+  padding-left: 15px
+  padding-right: 15px
+  @media screen and (min-width: 768px)
+    padding-left: 0
+    padding-right: 0
     max-width: $body-max-width-medium
   @media screen and (min-width: 1400px)
     max-width: $body-max-width-large
